image replaced and dark mode color fix.

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -341,6 +341,8 @@ ol {
 .dark-mode h4,
 .dark-mode h5,
 .dark-mode h6,
+.dark-mode p,
+.dark-mode div,
 .dark-mode .color-mode {
   color: #ffffff;
 }
